--- a/package.json
+++ b/package.json
@@ -8,17 +8,27 @@
 	},
 	"scripts": {
 		"dev": "vite",
-		"build": "vite build",
+		"build": "prisma generate && vite build",
 		"preview": "npm run build && wrangler dev",
-		"deploy": "npm run build && wrangler deploy"
+		"deploy": "npm run build && wrangler deploy",
+		"prisma:generate": "prisma generate",
+		"db:migrate": "npx wrangler d1 execute todo --local --file=./prisma/migrations/001_create_users.sql",
+		"db:migrate:prod": "npx wrangler d1 execute todo --file=./prisma/migrations/001_create_users.sql",
+		"db:create-user": "npx wrangler d1 execute todo --local --command=\"INSERT INTO users (name, email, password, updated_at) VALUES ('shefat', 'myphoto288@gmail.com', '11221122', CURRENT_TIMESTAMP);\"",
+		"db:create-user:prod": "npx wrangler d1 execute todo --command=\"INSERT INTO users (name, email, password, updated_at) VALUES ('shefat', 'myphoto288@gmail.com', '11221122', CURRENT_TIMESTAMP);\"",
+		"db:setup": "npm run db:migrate && npm run db:create-user",
+		"prisma:studio": "prisma studio"
 	},
 	"dependencies": {
+		"@prisma/adapter-d1": "^7.2.0",
+		"@prisma/client": "^7.2.0",
 		"vue": "^3.5.26",
 		"vue-router": "^4.6.4"
 	},
 	"devDependencies": {
 		"@cloudflare/vite-plugin": "^1.21.0",
 		"@vitejs/plugin-vue": "^6.0.3",
+		"prisma": "^7.2.0",
 		"vite": "^7.3.0",
 		"vite-plugin-vue-devtools": "^8.0.5",
 		"wrangler": "^4.59.2"
