feat: Complete SRS implementation with Vue 3, Pinia, Tailwind CSS
- Add authentication system with JWT tokens
- Implement user management (CRUD operations)
- Create responsive dashboard with sidebar and header
- Add Pinia stores for auth and UI state management
- Implement router guards for public/private routes
- Create layouts (PublicLayout, PrivateLayout)
- Add views: Login, Dashboard, Profile, ProfileUpdate
- Configure Tailwind CSS v4 with PostCSS
- Set up production database migrations
- Add Font Awesome icons via CDN
- All components use Options API only
- Responsive design with mobile-first approach

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -13,6 +13,7 @@
 	"observability": {
 		"enabled": true
 	},
+	"compatibility_flags": ["nodejs_compat"],
 	// ✅ D1 DATABASE BINDING
 	"d1_databases": [
 		{
