--- a/package.json
+++ b/package.json
@@ -13,15 +13,24 @@
 		"deploy": "npm run build && wrangler deploy",
 		"prisma:generate": "prisma generate",
 		"db:migrate": "npx wrangler d1 execute todo --local --file=./prisma/migrations/001_create_users.sql",
-		"db:migrate:prod": "npx wrangler d1 execute todo --file=./prisma/migrations/001_create_users.sql",
+		"db:migrate:prod": "npx wrangler d1 execute todo --remote --file=./prisma/migrations/003_setup_all_tables.sql",
+		"db:migrate:prod:users": "npx wrangler d1 execute todo --remote --file=./prisma/migrations/001_create_users.sql",
+		"db:migrate:prod:todos": "npx wrangler d1 execute todo --remote --file=./prisma/migrations/002_create_todos.sql",
 		"db:create-user": "npx wrangler d1 execute todo --local --command=\"INSERT INTO users (name, email, password, updated_at) VALUES ('shefat', 'myphoto288@gmail.com', '11221122', CURRENT_TIMESTAMP);\"",
-		"db:create-user:prod": "npx wrangler d1 execute todo --command=\"INSERT INTO users (name, email, password, updated_at) VALUES ('shefat', 'myphoto288@gmail.com', '11221122', CURRENT_TIMESTAMP);\"",
+		"db:create-user:prod": "npx wrangler d1 execute todo --remote --command=\"INSERT INTO users (name, email, password, updated_at) VALUES ('shefat', 'myphoto288@gmail.com', '11221122', CURRENT_TIMESTAMP);\"",
 		"db:setup": "npm run db:migrate && npm run db:create-user",
+		"db:setup:prod": "npm run db:migrate:prod && npm run db:create-user:prod",
 		"prisma:studio": "prisma studio"
 	},
 	"dependencies": {
 		"@prisma/adapter-d1": "^7.2.0",
 		"@prisma/client": "^7.2.0",
+		"@tailwindcss/postcss": "^4.1.18",
+		"autoprefixer": "^10.4.23",
+		"jose": "^6.1.3",
+		"pinia": "^3.0.4",
+		"postcss": "^8.5.6",
+		"tailwindcss": "^4.1.18",
 		"vue": "^3.5.26",
 		"vue-router": "^4.6.4"
 	},
