--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
 		"prisma:generate": "prisma generate",
 		"db:migrate": "npx wrangler d1 execute todo --local --file=./prisma/migrations/001_create_users.sql",
 		"db:migrate:prod": "npx wrangler d1 execute todo --remote --file=./prisma/migrations/003_setup_all_tables.sql",
+		"db:migrate:projects": "npx wrangler d1 execute todo --local --file=./prisma/migrations/004_create_projects.sql",
+		"db:migrate:projects:prod": "npx wrangler d1 execute todo --remote --file=./prisma/migrations/004_create_projects.sql",
 		"db:migrate:prod:users": "npx wrangler d1 execute todo --remote --file=./prisma/migrations/001_create_users.sql",
 		"db:migrate:prod:todos": "npx wrangler d1 execute todo --remote --file=./prisma/migrations/002_create_todos.sql",
 		"db:create-user": "npx wrangler d1 execute todo --local --command=\"INSERT INTO users (name, email, password, updated_at) VALUES ('shefat', 'myphoto288@gmail.com', '11221122', CURRENT_TIMESTAMP);\"",
@@ -27,6 +29,7 @@
 		"@prisma/client": "^7.2.0",
 		"@tailwindcss/postcss": "^4.1.18",
 		"autoprefixer": "^10.4.23",
+		"axios": "^1.13.2",
 		"jose": "^6.1.3",
 		"pinia": "^3.0.4",
 		"postcss": "^8.5.6",
