--- a/package.json
+++ b/package.json
@@ -7,23 +7,25 @@
 		"node": "^20.19.0 || >=22.12.0"
 	},
 	"scripts": {
-		"dev": "vite",
+		"dev": "prisma generate && vite",
+		"dev:worker": "prisma generate && wrangler dev",
+		"dev:frontend": "vite",
 		"build": "prisma generate && vite build",
 		"preview": "npm run build && wrangler dev",
 		"deploy": "npm run build && wrangler deploy",
 		"prisma:generate": "prisma generate",
-		"db:migrate": "npx wrangler d1 execute todo --local --file=./prisma/migrations/001_create_users.sql",
-		"db:migrate:prod": "npx wrangler d1 execute todo --remote --file=./prisma/migrations/003_setup_all_tables.sql",
-		"db:migrate:projects": "npx wrangler d1 execute todo --local --file=./prisma/migrations/004_create_projects.sql",
-		"db:migrate:projects:prod": "npx wrangler d1 execute todo --remote --file=./prisma/migrations/004_create_projects.sql",
-		"db:migrate:tasks": "npx wrangler d1 execute todo --local --file=./prisma/migrations/005_create_tasks.sql",
-		"db:migrate:tasks:prod": "npx wrangler d1 execute todo --remote --file=./prisma/migrations/005_create_tasks.sql",
-		"db:migrate:prod:users": "npx wrangler d1 execute todo --remote --file=./prisma/migrations/001_create_users.sql",
-		"db:migrate:prod:todos": "npx wrangler d1 execute todo --remote --file=./prisma/migrations/002_create_todos.sql",
+		"db:migrate": "node scripts/migrate.js",
+		"db:migrate:prod": "node scripts/migrate.js --remote",
+		"db:seed": "node scripts/seed.js",
+		"db:seed:prod": "node scripts/seed.js --remote",
+		"db:setup": "npm run db:migrate && npm run db:create-user && npm run db:seed",
+		"db:setup:prod": "npm run db:migrate:prod && npm run db:create-user:prod && npm run db:seed:prod",
 		"db:create-user": "npx wrangler d1 execute todo --local --command=\"INSERT INTO users (name, email, password, updated_at) VALUES ('shefat', 'myphoto288@gmail.com', '11221122', CURRENT_TIMESTAMP);\"",
 		"db:create-user:prod": "npx wrangler d1 execute todo --remote --command=\"INSERT INTO users (name, email, password, updated_at) VALUES ('shefat', 'myphoto288@gmail.com', '11221122', CURRENT_TIMESTAMP);\"",
-		"db:setup": "npm run db:migrate && npm run db:create-user",
-		"db:setup:prod": "npm run db:migrate:prod && npm run db:create-user:prod",
+		"db:query": "npx wrangler d1 execute todo --local --command",
+		"db:query:prod": "npx wrangler d1 execute todo --remote --command",
+		"db:tables": "npx wrangler d1 execute todo --local --command=\"SELECT name FROM sqlite_master WHERE type='table' ORDER BY name;\"",
+		"db:tables:prod": "npx wrangler d1 execute todo --remote --command=\"SELECT name FROM sqlite_master WHERE type='table' ORDER BY name;\"",
 		"prisma:studio": "prisma studio"
 	},
 	"dependencies": {
