--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -23,7 +23,7 @@
 		}
 	]
 	/**
-	 * Smart Placement
+	 * Smart Placement+
 	 * https://developers.cloudflare.com/workers/configuration/smart-placement/#smart-placement
 	 */
 	// "placement": {  "mode": "smart" }
